effective-network-inspector/tests/fixtures/vm_nic_ids.json
[
  "/subscriptions/sub-123/resourceGroups/my-rg/providers/Microsoft.Network/networkInterfaces/nic-a",
  "/subscriptions/sub-123/resourceGroups/my-rg/providers/Microsoft.Network/networkInterfaces/nic-b"
]
